methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:21: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:37: error: Unmatched closing brace '}' ignored here
}
^